--- a/home_cluster/helm_app/prometheus-stack.yaml
+++ b/home_cluster/helm_app/prometheus-stack.yaml
@@ -64,17 +64,11 @@ spec:
                   - alertname = "Watchdog"
             receivers:
             - name: 'telegram'
-              webhook_configs:
-              - url: 'https://api.telegram.org/bot7189406686:AAEEprycgOq_Ct_B6YbOQmEUK30fHIXCeyI/sendMessage'
-                send_resolved: true
-                http_config:
-                  headers:
-                    Content-Type: 'application/json'
-                message: |
-                  {
-                    "chat_id": "282307402",
-                    "text": "{{ template \"telegram.default.message\" . }}"
-                  }
+              telegram_configs:
+              - bot_token: '7189406686:AAEEprycgOq_Ct_B6YbOQmEUK30fHIXCeyI'
+                api_url: 'https://api.telegram.org'
+                chat_id: 282307402
+                parse_mode: ''
             templates:
             - '/etc/alertmanager/config/*.tmpl'
           templateFiles:
