--- a/home_cluster/helm_app/prometheus-stack.yaml
+++ b/home_cluster/helm_app/prometheus-stack.yaml
@@ -15,6 +15,14 @@ spec:
     helm:
       skipCrds: true
       values: |-
+        kubeEtcd:
+          enabled: true
+          serviceMonitor:
+            enabled: true
+            serviceMonitor:
+              enabled: true
+              insecureSkipVerify: true
+              serverName: "127.0.0.1"
         grafana:
           enabled: true
           persistence:
