--- a/home_cluster/helm_app/prometheus-stack.yaml
+++ b/home_cluster/helm_app/prometheus-stack.yaml
@@ -111,7 +111,7 @@ spec:
   source:
     repoURL: https://github.com/prometheus-community/helm-charts.git
     path: charts/kube-prometheus-stack/charts/crds/
-    targetRevision: kube-prometheus-stack-61.3.2
+    targetRevision: kube-prometheus-stack-61.*
     directory:
       recurse: true
   syncPolicy:
