--- a/home_cluster/helm_app/prometheus-stack.yaml
+++ b/home_cluster/helm_app/prometheus-stack.yaml
@@ -96,28 +96,28 @@ spec:
                 *Ends At:* {{ .EndsAt }}
               {{ end }}
               {{ end }}
----
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  name: kube-prometheus-stack-crds
-  annotations:
-    argocd.argoproj.io/sync-wave: "2"
-spec:
-  destination:
-    name: in-cluster
-    namespace: monitoring
-  project: default
-  source:
-    repoURL: https://github.com/prometheus-community/helm-charts.git
-    path: charts/kube-prometheus-stack/charts/crds/
-    targetRevision: kube-prometheus-stack-61.*
-    directory:
-      recurse: true
-  syncPolicy:
-    syncOptions:
-      - CreateNamespace=true
-      - Replace=true
-    automated:
-      prune: true
-      selfHeal: true
+# ---
+# apiVersion: argoproj.io/v1alpha1
+# kind: Application
+# metadata:
+#   name: kube-prometheus-stack-crds
+#   annotations:
+#     argocd.argoproj.io/sync-wave: "2"
+# spec:
+#   destination:
+#     name: in-cluster
+#     namespace: monitoring
+#   project: default
+#   source:
+#     repoURL: https://github.com/prometheus-community/helm-charts.git
+#     path: charts/kube-prometheus-stack/charts/crds/
+#     targetRevision: kube-prometheus-stack-61.*
+#     directory:
+#       recurse: true
+#   syncPolicy:
+#     syncOptions:
+#       - CreateNamespace=true
+#       - Replace=true
+#     automated:
+#       prune: true
+#       selfHeal: true
