--- a/home_cluster/helm_app/prometheus-stack.yaml
+++ b/home_cluster/helm_app/prometheus-stack.yaml
@@ -22,6 +22,13 @@ spec:
       values: |-
         grafana:
           enabled: true
+          image:
+            registry: docker.io
+            repository: grafana/grafana
+            # if not set appVersion field from Chart.yaml is used
+            tag: "11.1.1"
+            sha: ""
+            pullPolicy: IfNotPresent
           persistence:
             enabled: true
             type: pvc
