--- a/home_cluster/helm_app/prometheus-stack.yaml
+++ b/home_cluster/helm_app/prometheus-stack.yaml
@@ -121,3 +121,34 @@ spec:
 #     automated:
 #       prune: true
 #       selfHeal: true
+---
+apiVersion: cert-manager.io/v1
+kind: Certificate
+metadata:
+  name: grafana-cert
+  namespace: monitoring
+spec:
+  commonName: mon.geracorp.ru
+  secretName: grafana-cert
+  dnsNames:
+    - mon.geracorp.ru
+  issuerRef:
+    kind: ClusterIssuer
+    name: letsencrypt-prod
+---
+apiVersion: traefik.io/v1alpha1
+kind: IngressRoute
+metadata:
+  name: grafana-tls
+  namespace: monitoring
+spec:
+  entryPoints:
+    - websecure
+  routes:
+  - match: Host(`mon.geracorp.ru`)
+    kind: Rule
+    services:
+    - name: kube-prometheus-stack-grafana
+      port: 80
+  tls:
+    secretName: grafana-cert
