label "release" off podMonitor, serviceMonitor, rule for kube prometheus stack

--- a/home_cluster/helm_app/prometheus-stack.yaml
+++ b/home_cluster/helm_app/prometheus-stack.yaml
@@ -20,6 +20,20 @@ spec:
     helm:
       skipCrds: true
       values: |-
+        prometheus:
+          enabled: true
+          prometheusSpec:
+            replicas: 1
+            resources:
+              limits:
+                cpu: 1
+                memory: 4Gi
+              requests:
+                cpu: 100m
+                memory: 1024Mi
+            podMonitorSelectorNilUsesHelmValues: false
+            serviceMonitorSelectorNilUsesHelmValues: false
+            ruleSelectorNilUsesHelmValues: false
         grafana:
           enabled: true
           image:
