--- a/home_cluster/helm_app/scrape-vault.yaml
+++ b/home_cluster/helm_app/scrape-vault.yaml
@@ -11,7 +11,7 @@ spec:
   metricsPath: /v1/sys/metrics
   staticConfigs:
     - labels:
-        job: vault-01
+        job: vault-cluster
       targets:
         - 192.168.1.160:8200
         - 192.168.1.161:8200
