change github2telegram bot image tag

--- a/home_cluster/github2telegram/github2telegram.yaml
+++ b/home_cluster/github2telegram/github2telegram.yaml
@@ -61,7 +61,7 @@ spec:
       serviceAccountName: default
       containers:
         - name: github2telegram
-          image: gerain/github2telegram:test4
+          image: gerain/github2telegram:v0.0.2
           imagePullPolicy: IfNotPresent
           command:
             ['sh', '-c']
