adding grafana_folder

--- a/home_cluster/helm_app/prometheus/prometheus-stack.yaml
+++ b/home_cluster/helm_app/prometheus/prometheus-stack.yaml
@@ -38,6 +38,13 @@ spec:
             scrapeConfigSelectorNilUsesHelmValues: false
         grafana:
           enabled: true
+          sidecar:
+            dashboards:
+              annotations:
+                grafana_folder: "Kubernetes"
+              folderAnnotation: "grafana_folder"
+              provider:
+                foldersFromFilesStructure: true
           persistence:
             enabled: true
             type: pvc
