--- a/home_cluster/nod32update/nod32update.yaml
+++ b/home_cluster/nod32update/nod32update.yaml
@@ -162,4 +162,4 @@ metadata:
     avp.kubernetes.io/kv-version: "2"
 type: Opaque
 stringData:
-  users: <users>
+  users: vault:secret/data/nod32update#users
