--- a/home_cluster/helm_app/prometheus/prometheus-stack.yaml
+++ b/home_cluster/helm_app/prometheus/prometheus-stack.yaml
@@ -13,6 +13,8 @@ spec:
     automated:
       prune: true
       selfHeal: true
+    syncOptions:
+      - CreateNamespace=true
   source:
     repoURL: 'https://prometheus-community.github.io/helm-charts'
     chart: kube-prometheus-stack
