--- a/home_cluster/jenkins/secrets.yaml
+++ b/home_cluster/jenkins/secrets.yaml
@@ -3,9 +3,6 @@ kind: Secret
 metadata:
   name: docker-registry-geracorp-login
   namespace: jenkins
-  annotations:
-    avp.kubernetes.io/path: "secret/data/docker_registry"
-    avp.kubernetes.io/kv-version: "2"
 stringData:
-  .dockerconfigjson: <dockerconfigjson>
+  .dockerconfigjson: vault:secret/data/docker_registry#dockerconfigjson
 type: kubernetes.io/dockerconfigjson
