--- a/home_cluster/jenkins/secrets.yaml
+++ b/home_cluster/jenkins/secrets.yaml
@@ -3,6 +3,6 @@ kind: Secret
 metadata:
   name: docker-registry-geracorp-login
   namespace: jenkins
-data:
+stringData:
   .dockerconfigjson: vault:secret/data/docker_registry#dockerconfigjson
 type: kubernetes.io/dockerconfigjson
