--- a/home_cluster/jenkins/secrets.yaml
+++ b/home_cluster/jenkins/secrets.yaml
@@ -4,5 +4,5 @@ metadata:
   name: docker-registry-geracorp-login
   namespace: jenkins
 stringData:
-  .dockerconfigjson: '{"auths":{"docker-registry.local.geracorp.work":{"auth":"vault:secret/data/docker_registry#value"}}}'
+  .dockerconfigjson: '{"auths":{"docker-registry.local.geracorp.work":{"auth":"dmF1bHQ6c2VjcmV0L2RhdGEvZG9ja2VyX3JlZ2lzdHJ5I3ZhbHVl"}}}'
 type: kubernetes.io/dockerconfigjson
