--- a/home_cluster/helm_app/prometheus/secrets.yaml
+++ b/home_cluster/helm_app/prometheus/secrets.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: alertmanager-secrets
-  namespace: prometheus
+  namespace: monitoring
 stringData:
   telegram-bot-token: vault:secret/data/alertmanager#telegram_token
 type: Opaque
