--- a/home_cluster/helm_app/prometheus/prometheus-stack.yaml
+++ b/home_cluster/helm_app/prometheus/prometheus-stack.yaml
@@ -118,6 +118,22 @@ spec:
                 *Ends At:* {{ .EndsAt }}
               {{ end }}
               {{ end }}
+        kubeEtcd:
+          enabled: true
+          service:
+            selector:
+              k8s-app: kube-controller-manager # Fix selector for kube-etcd for Talos (set itentionally to kube-controller-manager because all master nodes has the same roles)
+          serviceMonitor:
+            relabelings:   # Add nodename label
+              - sourceLabels: [__meta_kubernetes_pod_node_name]
+                separator: ;
+                regex: ^(.*)$
+                targetLabel: nodename
+                replacement: $1
+                action: replace
+            metricRelabelings:   # Remove pod label
+              - action: labeldrop
+                regex: pod
 ---
 apiVersion: cert-manager.io/v1
 kind: Certificate
