disable kubeControllerManager kubeSchedulerAlerting kubeSchedulerRecording

--- a/home_cluster/helm_app/prometheus/prometheus-stack.yaml
+++ b/home_cluster/helm_app/prometheus/prometheus-stack.yaml
@@ -25,6 +25,11 @@ spec:
       values: |-
         prometheus:
           enabled: true
+          defaultRules:
+            rules:
+              kubeControllerManager: false
+              kubeSchedulerAlerting: false
+              kubeSchedulerRecording: false
           prometheusSpec:
             replicas: 1
             resources:
