--- a/home_cluster/helm_app/prometheus/scrape-vault.yaml
+++ b/home_cluster/helm_app/prometheus/scrape-vault.yaml
@@ -16,3 +16,22 @@ spec:
         - 192.168.1.160:8200
         - 192.168.1.161:8200
         - 192.168.1.162:8200
+---
+apiVersion: monitoring.coreos.com/v1alpha1
+kind: ScrapeConfig
+metadata:
+  name: vault-cluster-nodes
+  namespace: monitoring
+  labels:
+    prometheus: vault
+    release: prom
+spec:
+  scheme: HTTP
+  metricsPath: /metrics
+  staticConfigs:
+    - labels:
+        job: vault-cluster
+      targets:
+        - 192.168.1.160:9100
+        - 192.168.1.161:9100
+        - 192.168.1.162:9100
