--- a/home_cluster/helm_app/prometheus/blackbox.yaml
+++ b/home_cluster/helm_app/prometheus/blackbox.yaml
@@ -22,7 +22,7 @@ spec:
     targetRevision: 9.*
     helm:
       skipCrds: false
-      values:
+      values: |-
         serviceMonitor:
           enabled: true
           targets:
