--- a/home_cluster/helm_app/prometheus/blackbox.yaml
+++ b/home_cluster/helm_app/prometheus/blackbox.yaml
@@ -22,7 +22,7 @@ spec:
     targetRevision: 9.*
     helm:
       skipCrds: false
-      values: |-
+      valuesObject:
         serviceMonitor:
           enabled: true
           targets:
@@ -30,11 +30,11 @@ spec:
               url: https://sea.geracorp.ru      # The URL that blackbox will scrape
               hostname: sea.geracorp.ru         # HTTP probes can accept an additional `hostname` parameter that will set `Host` header and TLS SNI
             - name: mail-biostal
-              url: https://mail.biostal.ru:4040
+              url: https://mail.biostal.ru:4040/admin/login/
               hostname: mail.biostal.ru
             - name: control-biostal
-              url: https://control.biostal.ru:4081
+              url: https://control.biostal.ru:4081/admin/login/
               hostname: control.biostal.ru
             - name: cloud-biostal
-              url: https://cloud.biostal.ru
+              url: https://cloud.biostal.ru/login
               hostname: cloud.biostal.ru
