--- a/home_cluster/helm_app/prometheus/prometheus-stack.yaml
+++ b/home_cluster/helm_app/prometheus/prometheus-stack.yaml
@@ -22,7 +22,7 @@ spec:
     targetRevision: 68.*
     helm:
       skipCrds: false
-      values: |-
+      valuesObject:
         defaultRules:
           rules:
             kubeControllerManager: false
