--- a/home_cluster/helm_app/prometheus/blackbox.yaml
+++ b/home_cluster/helm_app/prometheus/blackbox.yaml
@@ -23,8 +23,8 @@ spec:
     helm:
       skipCrds: false
       valuesObject:
-        image:
-          tag: "master"
+        selfMonitor:
+          enabled: true
         serviceMonitor:
           enabled: true
           targets:
