change storageclassname for influxdb

--- a/home_cluster/influxDB/influxDB.yaml
+++ b/home_cluster/influxDB/influxDB.yaml
@@ -45,6 +45,7 @@ spec:
       spec:
         accessModes:
           - ReadWriteOnce
+        storageClassName: openmediavault-nfs-client
         resources:
           requests:
             storage: 5G
