--- a/home_cluster/nod32update/nod32update.yaml
+++ b/home_cluster/nod32update/nod32update.yaml
@@ -22,13 +22,13 @@ spec:
           - 0
       containers:
         - name: nod32update
-          image: gerain/nod32update-mirror:12.12.2024
+          image: gerain/nod32py:latest
           imagePullPolicy: IfNotPresent
           command: ["sh", "-c"]
           args:
           - |
             "nginx" "-g" "daemon off;" &
-            while true; do php update.php; sleep 3h; done
+            while true; do /usr/local/bin/python /app/pynod/update.py; sleep 3h; done
           ports:
             - containerPort: 80
               name: http-nod32up
