--- a/home_cluster/helm_app/prometheus/prometheus-stack.yaml
+++ b/home_cluster/helm_app/prometheus/prometheus-stack.yaml
@@ -117,39 +117,15 @@ spec:
           config:
             global:
               resolve_timeout: 5m
-            inhibit_rules:
-              - source_matchers:
-                  - 'severity = critical'
-                target_matchers:
-                  - 'severity =~ warning|info'
-                equal:
-                  - 'namespace'
-                  - 'alertname'
-              - source_matchers:
-                  - 'severity = warning'
-                target_matchers:
-                  - 'severity = info'
-                equal:
-                  - 'namespace'
-                  - 'alertname'
-              - source_matchers:
-                  - 'alertname = InfoInhibitor'
-                target_matchers:
-                  - 'severity = info'
-                equal:
-                  - 'namespace'
-              - target_matchers:
-                  - 'alertname = InfoInhibitor'
             route:
-              group_by: ['namespace']
+              group_by: ['alertname', 'namespace']
               group_wait: 30s
               group_interval: 5m
               repeat_interval: 12h
-              receiver: 'telegram'
               routes:
-              - receiver: 'telegram'
-                matchers:
-                  - alertname = "Watchdog"
+              - match:
+                receiver: 'telegram'
+                continue: true
             receivers:
             - name: 'telegram'
               telegram_configs:
