--- a/home_cluster/helm_app/prometheus/prometheus-stack.yaml
+++ b/home_cluster/helm_app/prometheus/prometheus-stack.yaml
@@ -127,6 +127,7 @@ spec:
                 receiver: 'telegram'
                 continue: true
             receivers:
+            - name: 'null'
             - name: 'telegram'
               telegram_configs:
               - bot_token_file: '/etc/alertmanager/secrets/alertmanager-secrets/telegram-bot-token'
