change laert template

--- a/home_cluster/helm_app/prometheus/prometheus-stack.yaml
+++ b/home_cluster/helm_app/prometheus/prometheus-stack.yaml
@@ -176,11 +176,15 @@ spec:
               {{ range .Alerts }}
               --------------------------------------
               🖥️  <b>Host:</b> {{ .Labels.instance }}
+              Alert: {{ .Annotations.summary }}
               {{ if eq .Labels.severity "critical" }}❌  <b>Severity:</b> {{ .Labels.severity }}
               {{ else if eq .Labels.severity "warning" }}⚠️  <b>Severity:</b> {{ .Labels.severity }}
               {{ else }}❗  <b>Severity:</b> {{ .Labels.severity }}{{ end }}--------------------------------------
               🗒️  <b>Description:</b><pre><code>{{ .Annotations.description }}</code></pre>
               {{ end }}
+              Status: {{ .Status }}
+              Starts At: {{ .StartsAt }}
+              Ends At: {{ .EndsAt }}
               {{ end }}
         kubeEtcd:
           enabled: true
